# fb4rasp

./: .gitignore  Cargo.toml  Makefile.toml  README.md
client/: Cargo.toml
client/src/: main.rs
display/: Cargo.toml
display/src/: cairo_ref_context.rs  fb4rasp.rs  gtk.rs  input.rs  lib.rs  svgb.rs  utils.rs
engine/: Cargo.toml
engine/src/: action.rs  condition.rs  engine.rs  lib.rs  params.rs  ring_buffer.rs  rule.rs
files/: fb4rasp-client.service  oled-display.service  oled-display.toml
main/: Cargo.toml
main/src/: config.rs  helpers.rs  main.rs  render.rs  time_net_cpu.rs  timeouts.rs
main/src/actors/: mod.rs
main/src/actors/render/: engine.rs  mod.rs  pong.rs  time_net_cpu.rs
main/src/render/: mod.rs  pong.rs  time_net_cpu.rs
session/: Cargo.toml
session/src/: lib.rs  ssh_session.rs  ws_session.rs
shared/: Cargo.toml
shared/src/: lib.rs  notify.rs
src/: action.rs  actions.rs  condition.rs  engine.rs  lib.rs  main.rs  params.rs  ring_buffer.rs  rule.rs  session.rs
