[package]
name = "fb4rasp"
version = "0.1.0"
authors = ["Piotr Zaczkowski"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.9", default-features = false, features = [ "v1_16" ] }
cairo-sys-rs = "0.10"
time = "0.2"
num-traits = "0.2"
env_logger = "0.7"
evdev = "0.10"
linuxfb = "0.2"
log = "0.4"
memmap = "0.7"
structopt = "0.3"
tokio = { version = "0.2", features = [ "full" ] }

[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1
