[package]
name = "fb4rasp"
version = "0.1.0"
authors = ["Piotr Zaczkowski"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adafruit-mpr121 = "0.1"
cairo-rs = { version = "0.9", default-features = false, features = [ "v1_16" ] }
cairo-sys-rs = "0.10"
chrono = "0.4"
env_logger = "0.8"
evdev = "0.10"
linuxfb = "0.2"
log = "0.4"
memmap = "0.7"
num-traits = "0.2"
plotters = "0.3"
plotters-cairo = "0.3"
plotters-backend = "0.3"
rand = "0.8"
size = "0.1"
ssh2 = "0.9"
structopt = "0.3"
sysinfo = "0.15"
tokio = { version = "1.0", features = [ "full" ] }

[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1
