[package]
name = "display"
version = "0.1.0"
authors = ["Piotr Zaczkowski"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adafruit-mpr121 = "0.1"
evdev = "0.10"
linuxfb = "0.2"
log = "0.4"
memmap = "0.7"
num-traits = "0.2"
plotters = "0.3"
plotters-backend = "0.3"

[dependencies.plotters-cairo]
version = "0.3"
git = "https://github.com/zaczkows/plotters-cairo"

[dependencies.cairo-rs]
version = "0.9"
default-features = false
features = [ "v1_16", "freetype", "svg" ]

[dependencies.cairo-sys-rs]
version = "0.10"
default-features = false
features = [ "v1_16" ]
