[package]
name = "engine"
version = "0.1.0"
authors = ["Piotr Zaczkowski"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adafruit-mpr121 = "0.1"
fb4rasp-shared = { path = "../shared" }
log = "0.4"
parking_lot = "0.11"
tokio = { version = "1.5", features = [ "full" ] }
toml = "0.5"
