[package]
name = "engine"
version = "0.1.0"
authors = ["Piotr Zaczkowski"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adafruit-mpr121 = { git = "https://github.com/zaczkows/adafruit-mpr121", branch = "emulation" }
crossbeam = "0.8"
fb4rasp-shared = { path = "../shared" }
log = "0.4"
parking_lot = "0.12"
tokio = { version = "1.17", features = [ "full" ] }
toml = "0.5"
