[package]
name = "fb4rasp"
version = "0.2.0"
authors = ["Piotr Zaczkowski"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adafruit-mpr121 = { git = "https://github.com/zaczkows/adafruit-mpr121", branch = "emulation" }
chrono = "0.4"
crossbeam = "0.8"
display = { path = "../display" }
engine = { path = "../engine" }
env_logger = "0.9"
fb4rasp-shared = { path = "../shared" }
http = "0.2"
log = "0.4"
num-traits = "0.2"
plotters = "0.3"
plotters-backend = "0.3"
rand = { version = "^0.8", features = [ "small_rng" ] }
session = { path = "../session" }
size = "0.1"
structopt = "0.3"
sysinfo = "0.23"
tokio = { version = "1.17", features = [ "full" ] }
toml = "0.5"

[dependencies.plotters-cairo]
version = "0.3"
git = "https://github.com/zaczkows/plotters-cairo"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[features]
# should emulation for various things be enabled
emulation = []
