[package]
name = "session"
version = "0.1.0"
authors = ["Piotr Zaczkowski"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-util = "0.3"
log = "0.4"
ssh2 = "0.9"
tokio = { version = "1.12", features = [ "full" ] }
tokio-tungstenite = "0.15"
tungstenite = "^0.14"
