[package]
name = "fb4rasp-shared"
version = "0.1.0"
authors = ["Piotr Zaczkowski"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]
